--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.opensource</groupId>
+    <groupId>com.github.grchr</groupId>
     <artifactId>yf-models-proto</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
 
     <name>Proto Models</name>
